# no-std-io

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cursor.rs  fuzz_read.rs  fuzz_write.rs
src/: io.rs  lib.rs
src/io/: buffered.rs  cursor.rs  error.rs  impls.rs  util.rs
tests/: tests.rs
