[package]
name = "no_std_io"
version = "0.6.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>", "no_std I/O Developers"]
description = "The bare essentials of std::io for use in no_std. Alloc support is optional."
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/no-std-io/no-std-io"
categories = ["no-std"]

[dependencies]
memchr = { version = "2", default-features = false }

[features]
default = []
std = ["alloc"]
alloc = []
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]
